templates/aptly/aptly-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: aptly
  name: aptly
