templates/aptly/aptly-public-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aptly
    role: public
    romulus/lb: vulcan
    romulus/route: public
  name: aptly-public
  namespace: aptly
spec:
  ports:
  - name: web
    port: 80
  selector:
    app: aptly
    role: public
